--- a/discord-bot/build.gradle
+++ b/discord-bot/build.gradle
@@ -7,13 +7,16 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    maven {
+        url 'https://m2.dv8tion.net/releases'
+    }
 }
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     implementation("net.dv8tion:JDA:5.0.0-alpha.11")
-
+    implementation 'com.sedmelluq:lavaplayer:1.3.77'
 }
 
 test {
