--- a/discord-bot/build.gradle
+++ b/discord-bot/build.gradle
@@ -10,6 +10,9 @@ repositories {
     maven {
         url 'https://m2.dv8tion.net/releases'
     }
+    maven {
+        url 'https://mvnrepository.com/artifact/org.json/json'
+    }
 }
 
 dependencies {
@@ -17,6 +20,9 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     implementation("net.dv8tion:JDA:5.0.0-alpha.11")
     implementation 'com.sedmelluq:lavaplayer:1.3.77'
+    implementation 'org.json:json:20220320'
+
+
 }
 
 test {
