--- a/discord-bot/build.gradle
+++ b/discord-bot/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 group 'me.princecharming'
@@ -26,7 +27,7 @@ dependencies {
     implementation("net.dv8tion:JDA:5.0.0-alpha.11")
     implementation 'com.github.walkyst:lavaplayer-fork:1.3.97.1'
     implementation 'org.json:json:20220320'
-
+    shadow 'junit:junit:3.8.2'
 
 }
 
@@ -37,6 +38,16 @@ test {
 jar{
     manifest{
         attributes 'Main-Class' : 'com.princecharming.Main'
+        attributes 'Description': 'This is the working discord bot JAR file'
     }
 }
+
+shadowJar {
+    archiveBaseName.set('shadow')
+    archiveClassifier.set('')
+    archiveVersion.set('')
+}
+
+
+
 
